--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "axios": "^1.2.1",
     "Faker": "^0.7.2",
     "isomorphic-fetch": "^3.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-charts": "^3.0.0-beta.51",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.0",
+    "react-jwt": "^1.1.8",
     "react-query": "^3.39.2",
     "react-router": "^6.5.0",
-    "react-router-dom": "^6.5.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "sass": "^1.57.0",
     "three": "^0.147.0",
