--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@api-platform/api-doc-parser": "^0.16.1",
     "@react-three/drei": "^9.46.5",
     "@react-three/fiber": "^8.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "api-doc-parser": "^0.2.1",
@@ -53,6 +52,9 @@
     ]
   },
   "devDependencies": {
-    "faker": "^5.5.3"
+    "@testing-library/jest-dom": "^5.16.5",
+    "axios-mock-adapter": "^1.21.2",
+    "faker": "^5.5.3",
+    "jest": "^27.5.1"
   }
 }
